RESOLVED FIXED71769
[WK][GTK] Application cache directory is incorrectly set
https://bugs.webkit.org/show_bug.cgi?id=71769
Summary [WK][GTK] Application cache directory is incorrectly set
Zan Dobersek
Reported 2011-11-07 23:09:24 PST
As discussed in bug #70680, the appcache directory should be located in user's local cache directory and not in WebKit's database directory.
Attachments
Patch (1.90 KB, patch)
2011-11-07 23:27 PST, Zan Dobersek
no flags
Patch (3.18 KB, patch)
2011-11-08 04:14 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2011-11-07 23:27:09 PST
Created attachment 113998 [details] Patch Uses the same directory as in bug #70680
Zan Dobersek
Comment 2 2011-11-08 00:17:16 PST
(In reply to comment #1) > Created an attachment (id=113998) [details] > Patch > > Uses the same directory as in bug #70680 Just noted that with this change, documentation for webkit_application_cache_get_database_directory_path becomes invalid. That should be addressed as well.
Zan Dobersek
Comment 3 2011-11-08 04:14:46 PST
Created attachment 114037 [details] Patch Updated patch
WebKit Review Bot
Comment 4 2011-11-08 09:36:19 PST
Comment on attachment 114037 [details] Patch Clearing flags on attachment: 114037 Committed r99578: <http://trac.webkit.org/changeset/99578>
WebKit Review Bot
Comment 5 2011-11-08 09:36:24 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.