[WK][GTK] Application cache directory is incorrectly set https://bugs.webkit.org/show_bug.cgi?id=71769

Patch by Zan Dobersek <zandobersek@gmail.com> on 2011-11-08
Reviewed by Martin Robinson.

Set the application cache directory to be placed in current user's
cache directory and update documentation for
webkit_application_cache_get_database_directory_path after these
changes and changes in r80715;

* webkit/webkitapplicationcache.cpp:
* webkit/webkitglobals.cpp:
(webkitInit): Switch one string formation to use GOwnPtr<gchar>.

Canonical link: https://commits.webkit.org/88151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99578 268f45cc-cd09-0410-ab3c-d52691b4dbfc